--- a/index.html
+++ b/index.html
@@ -29,6 +29,35 @@
                         <div id="board3" class="board"></div>
                     </div>
                 </div>
+                <div id="column" class="cloumn">
+                    <div class="titleContainer">
+                        <div class="titleblock"></div>
+                        <div class="titlepic"></div>
+                        <p class="title">column1</p>
+                    </div>
+                    <div class="labelcontainer">
+                        <div class="card">
+                            <div class="cover"></div>
+                            <div class="card_title_container">
+                                <p class="card_title"></p>
+                            </div>
+                            <div class="card_data">
+                                <div class="card_view_container">
+                                    <svg></svg>
+                                    <p class="card_view"></p>
+                                </div>
+                                <div class="card_like_container">
+                                    <svg></svg>
+                                    <p class="card_like"></p>
+                                </div>
+                                <div class="card_favorites_container">
+                                    <svg></svg>
+                                    <p class="card_favorites"></p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </body>
