--- a/index.html
+++ b/index.html
@@ -16,11 +16,13 @@
                 </td>
             </div>
             <div id="containor">
-                <div id="intrudction">
-                    <p>Wecome here</p>
-                    <span></span>
-                </div>
                 <div id="firstboard">
+                    <div id="intrudction">
+                        <p>Wecome here</p>
+                        <span></span>
+                    </div>
+                </div>
+                <div id="boardercast">
                     <button class="board_swicher"></button>
                     <button class="board_swicher"></button>
                     <div class="container">
@@ -59,6 +61,7 @@
                     </div>
                 </div>
             </div>
+            <!-- <div id="background"></div> -->
         </div>
     </body>
 </html>
