--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>community</title>
+        <link href="static/index.css" rel="stylesheet" type="text/css" />
     </head>
     <body>
         <div id="root">
