repair the bug of css

--- a/index.html
+++ b/index.html
@@ -4,8 +4,11 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>community</title>
-        <link href="css/index.css" rel="stylesheet" type="text/css" />
+        <link href="page/css/index.css" rel="stylesheet" type="text/css" />
     </head>
+
+    <script src="page/js/index.js"></script>
+    
     <body>
         <div id="root">
             <div id="top">
