--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     </head>
 
     <script src="page/js/index.js"></script>
+    <script src="page/js/function.js"></script>
     
     <body>
         <div id="root">
